--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -1,17 +1,22 @@
 ---
 title: "Historical horse population in Canada"
-output: github_document
+output:
+  github_document:
+    toc: true
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 library(tidyverse)
+library(knitr)
 ```
+
+
 
 ## Aim
 
 This project explores the historical population of horses in Canada between 1906 and 1972 for each Province.
-
+- https://github.ubc.ca/MDS-2020-21/DSCI_522_individual_assignment_2_dengjr.git
 
 ## Data
 
@@ -54,14 +59,15 @@ industry after the Great Depression and the Second World War. An interesting fol
 
 Next we look at the range of the number horses for each provinces at any time point between 1940 - 1972:
 
-```{r max horse table}
+```{r max horse table, message=FALSE, warning=FALSE}
 max_horses <- horse_pop %>% 
   select(GEO, Value) %>% 
   rename(Province = GEO) %>% 
   group_by(Province) %>% 
   summarize(Maximum = max(Value),
             Minimum = min(Value))
-max_horses
+kable(max_horses,
+      caption = "Table 1. Maximum and minimum number of horses for each province between 1940 - 1972")
 ```
 
 Below we zoom in and look at the province of Alberta:
